--- a/front/db/stud-info.html
+++ b/front/db/stud-info.html
@@ -11,6 +11,11 @@
     <!-- <div id="results"></div> -->
     <br></br>
     <a href="../index.html">Back to Home Page</a>
+    <br></br>
+    <a href="../reg/stud-regForm.html">Student Registration Page</a>
+
+    
     <script src="askDB.js"></script>
+    <br></br>
   </body>
 </html>
