--- a/front/reg/stud-regForm.html
+++ b/front/reg/stud-regForm.html
@@ -19,11 +19,13 @@
         <input type='text' id='lastName' name='lastName' id='lastName' required placeholder='Your Last Name'/>
       </div>
       <br></br>
-      <a href="../index.html">Back to Home Page</a>
-
-      <br></br>
       <button id="info" type='submit'>Submit</button>
-    
+      <br></br>
+      <a href="../index.html">Back to Home Page</a>
+      <br></br>
+      <a href="../db/stud-info.html">Students Page</a>
+      <br></br>
+      
     </form>
     <script src="reg.js"></script>
   </body>
