--- a/front/index.html
+++ b/front/index.html
@@ -10,9 +10,11 @@
     <form>
       <h1>Welcome to our Home Page</h1>
         <div>
-             <a href="./reg/stud-regform.html">Add new student</a>
+             <a href="./studreg/stud-regform.html">Add new student</a>
               <br></br>
-              <a href="./db/stud-info.html">Registered Students</a>
+              <a href="./studdb/stud-info.html">Registered Students</a>
+              <br></br>
+              <a href="./regions/regions.html">Regions</a>
         </div>
 
       <!-- <br></br> -->
