--- a/front/studdb/stud-info.html
+++ b/front/studdb/stud-info.html
@@ -12,7 +12,7 @@
     <br></br>
     <a href="../index.html">Back to Home Page</a>
     <br></br>
-    <a href="../reg/stud-regForm.html">Student Registration Page</a>
+    <a href="../studreg/stud-regForm.html">Student Registration Page</a>
 
     
     <script src="askDB.js"></script>
