rename some files

--- a/front/countries/countries.html
+++ b/front/countries/countries.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Regions</title>
+    <title>Countries</title>
   </head>
   <body>
     <form method='GET' enctype='multipart/form-data'>
-      <h1>R E G I O N S</h1>
+      <h1>C O U N T R I E S </h1>
 
       <div>
         <label for='kay'><b>Kay Name</b></label>
@@ -17,15 +17,15 @@
 
       <br></br>
       <div>
-        <label for='regionNameArm'><b>Ragion Name /Arm/</b></label>
-        <input type='text' id='regionNameArm' name='regionNameArm'/>
+        <label for='countryNameArm'><b>Country Name /Arm/</b></label>
+        <input type='text' id='countryNameArm' name='countryNameArm'/>
       </div>
 
 
       <br></br>
       <div>
-        <label for='regionNameEn'><b>Region Name /En/</b></label>
-        <input type='text' id='regionNameEn' name='regionNameEn'/>
+        <label for='countryNameEn'><b>Country Name /En/</b></label>
+        <input type='text' id='countryNameEn' name='countryNameEn'/>
       </div>
 
 
@@ -38,6 +38,6 @@
       <br></br> -->
       
     </form>
-    <script src="regions.js"></script>
+    <script src="countries.js"></script>
   </body>
 </html>
