--- a/front/students/add-student.html
+++ b/front/students/add-student.html
@@ -9,16 +9,23 @@
   <body>
     <form method='GET' enctype='multipart/form-data'>
       <h1>Student Registration Form</h1>
+
+      <br></br>
       <div>
-        <label for='firstName'><b>First Name</b></label>
-        <input type='text' id='firstName' name='firstName' id='firstName' required placeholder='Your First Name'/>
+        <label for="username"><b>Create username</b></label>
+        <input type="text" name="username" id="username" required />
       </div>
 
+      <br></br>
+      <div>
+        <label for='firstName'><b>First Name</b></label>
+        <input type='text' id='firstName' name='firstName' id='firstName'/>
+      </div>
 
       <br></br>
       <div>
         <label for='lastName'><b>Last Name</b></label>
-        <input type='text' id='lastName' name='lastName' id='lastName' required placeholder='Your Last Name'/>
+        <input type='text' id='lastName' name='lastName' id='lastName'/>
       </div>
 
 
@@ -34,25 +41,21 @@
         <input type='number' id='age' name='age' min='1' max='100' step='1'/>
       </div>
 
-      <!-- <br></br>
+      <br></br>
       <div>
-        <label for='region'><b>Your Region</b></label>
+        <label for='region'><b>Select Your Region</b></label>
         <select name='region' id='region' >
-          <option value='yerevan'>Yerevan</option>
-          <option value='aragatsotn'>Aragatsotn</option>
-          <option value='ararat'>Ararat</Aption>
-          <option value='armavir'>Armavir</Aption>
-          <option value='gegharkunik'>Gegharkunik</option>
-          <option value='kotayk'>Kotayk</option>
-          <option value='lori'>Lori</option>
-          <option value='shirak'>Shirak</option>
-          <option value='syunik'>Syunik</option>
-          <option value='tavush'>Tavush</option>
-          <option value='vayotsDzor'>Vayots Dzor</option>
-        </select>
+          
       </div>
 
       <br></br>
+      <div>
+        <label for="studentPassword"><b>Password</b></label>
+        <input type="text" name="studentPassword" id="studentPassword" required/>
+      </div>
+
+
+          <!--   <br></br>
       <div>
         <b>Cities you would like/are able to move</b>
         <div>
@@ -143,10 +146,10 @@
       <br></br>
       <a href="../index.html">Back to Home Page</a>
       <br></br>
-      <a href="../studdb/stud-info.html">Students Page</a>
+      <a href="students.html">Back to Student's Page</a>
       <br></br>
       
     </form>
-    <script src="reg.js"></script>
+    <script src="add-student.js"></script>
   </body>
 </html>
