--- a/front/students/students.html
+++ b/front/students/students.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>University Home Page</title>
+    <title>Student's Page</title>
   </head>
   <body>
     <form>
-      <h1>University Home Page</h1>
+      <h1>Student's Page</h1>
         <div>
-             <a href="./students/students.html">Go To Student's Page</a>
-              <br></br>
-              <a href="./countries/countries.html">Countries</a>
-              <br></br>
-              <a href="./regions/regions.html">Regions</a>
+          <a href="get-students.html">View Registered Students</a>
+          <br></br>
+          
+          <a href="add-student.html">Add new student</a>
+          <br></br>
+
+          <a href="modify-student.html">Modify student</a>
+          <br></br>
         </div>
 
       <!-- <br></br> -->
