--- a/front/students/get-students.html
+++ b/front/students/get-students.html
@@ -12,10 +12,10 @@
     <br></br>
     <a href="../index.html">Back to Home Page</a>
     <br></br>
-    <a href="../studreg/stud-regForm.html">Student Registration Page</a>
+    <a href="students.html">Back to Student's Page</a>
 
     
-    <script src="askDB.js"></script>
+    <script src="get-students.js"></script>
     <br></br>
   </body>
 </html>
